<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_simplebg"
    android:id="@+id/adapter_loader"
    >

    <TextView
        android:id="@+id/text_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/button_load"
        android:text="@string/ll_text_game"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/text_difficulty"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/ll_difficulty_text" />

    <TextView
        android:id="@+id/text_undos"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/num_undos" />

    <Button
        android:id="@+id/button_load"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/ll_load_game" />

</LinearLayout >