...
    <string name="am_credentials_saved">Account credentials saved!</string>
    <string name="am_error_save">Unable to save credentials in AccountManager!</string>
    <string name="am_register_succ">Account registered!</string>

    <!-- MovementController's Toast's strings-->
    <string name="mc_win">YOU WIN!</string>
    <string name="mc_invalid_tap">Invalid Tap</string>

    <!-- GameActivity's Strings -->
    <string name="ga_undo">Undo:%1$d</string>
    <string name="ga_save">Save</string>
    <string name="ga_logged_as">Logged in:</string>
    <string name="ga_current_user">%1$s</string>
...
